* Fixed broken locales it and ar
* Fixed OSX crashes if previous ZIM was gone (ID: 3243147)
* Fixed regression with not always 100% visible close tab button (ID: 3377280)
* Fixed issue occuring by installing PPA 0.9 beta1 over alpha7 fails (ID: 3377130)
* Fixed drag zim file on Kiwix icon in OSX Dock (ID: 3315167)
* Fixed drag zim on Kiwix window in OSX (ID: 3385313)

Kiwix 0.9 beta1
* Remove a hard coded path in kiwix-compact.sh (ID: 3135956)
* Avoid the flickering during mouseover links after canceling the indexing
* Under Windows, installer adds now shortcuts to all users
* Force loading no plugin to avoid any problem (with libmoon for example)
* Under Windows, the displayed (disk) "space required" value is now correct in the installer
* kiwix-index backend argument is now an option and set as "xapian" per default
* Fix regressions responsible for lower case titles in result list (ID: 3147594)
* Implement the HTTP 404 error in kiwix-serve
* Fix a small bug in the indexing code to avoid forgetting around 100 articles per ZIM file
* Disable DNS prefetching for external links
* New locales: Polish, Dutch
* Open a ZIM file directly from the command line
* Gnome and KDE integration: mime-type recognition + icon & application associations (ZIM double-click feature)
* New checksum checker to be able to check ZIM file integrity
* A list of ZIM files to download is dynamicaly downloaded in the help page if user online (ID: 3165272)
* Simplification and improvment of the searchbar (no search button anymore, always available, standardized, ...)
* New Find-in-text bar (like in firefox, at the bottom), to replace the dialogbox.
* Result sidebar removed and replaced by a result web page "a la google"
* Usage of jar files for a quicker startup
* Kiwix for Mac OSX
* kiwix-serve CPU usage improvement (ID: 3213104)
* Update the Window title by switching the tabs
* New integrated content manager/downloader
* Introduction of Desktop notifications (ID: 3315162)